--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,7 @@
     "version": "0.2.0",
     "configurations": [
 
+
         {
             "python": "/home/lichen2204/miniconda3/envs/hugwbc/bin/python",
             "name": "Eval",
@@ -24,6 +25,19 @@
             "type": "debugpy",
             "request": "launch",
             "program": "/home/t480-2204/hugwbc/HugWBC/legged_gym/utils/low_state_handler.py",
+            "console": "integratedTerminal",
+            "cwd":"/home/t480-2204/hugwbc/HugWBC",
+            "args": [
+                "-r=h1-2"
+            ]
+        },
+
+        {
+            "python": "/home/t480-2204/miniconda3/envs/go2/bin/python",
+            "name": "low command test",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "/home/t480-2204/hugwbc/HugWBC/legged_gym/utils/low_state_controller.py",
             "console": "integratedTerminal",
             "cwd":"/home/t480-2204/hugwbc/HugWBC",
             "args": [
